--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,12 @@
 body {
   margin: 0;
   min-width: 320px;
+  overflow-x: hidden;
 }
 
 #root {
   width: 100%;
+  overflow-x: hidden;
 }
 
 a {
